--- a/style.css
+++ b/style.css
@@ -1,1 +1,12 @@
 
+
+
+
+
+nav {
+    font-family: "Shrikhand", serif;
+    font-weight: 400;
+    font-style: normal;
+    background-color: #7E6945;
+  }
+  
