--- a/style.css
+++ b/style.css
@@ -1,12 +1,27 @@
 
-
-
-
-
 nav {
     font-family: "Shrikhand", serif;
     font-weight: 400;
     font-style: normal;
-    background-color: #7E6945;
+    background-color: #7E6945; 
   }
+.navbar-toggler {
+  color:#F2D0D3
+}
+
+.navbar-toggler-icon {
+  color:#F2D0D3
+}
+
+.navbar-brand {
+    color: #F2D0D3
+}
+
+a:link{
+    color: #F2D0D3
+}
+
+a:visited {
+    color: #F2D0D3
+}
   
