--- a/style.css
+++ b/style.css
@@ -1,16 +1,14 @@
 
-nav {
+.navbar-custom {
+
     font-family: "Shrikhand", serif;
     font-weight: 400;
     font-style: normal;
     background-color: #7E6945; 
   }
-.navbar-toggler {
-  color:#F2D0D3
-}
 
-.navbar-toggler-icon {
-  color:#F2D0D3
+.navbar-toggler{
+  color: #F2D0D3;
 }
 
 .navbar-brand {
@@ -33,7 +31,5 @@ h6 {
   text-align: center;
 }
 
-button {
-  background-color: blue
-}
+
   
