--- a/style.css
+++ b/style.css
@@ -27,5 +27,12 @@ h6 {
   text-align: center;
 }
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 200px;
+  height: 200px;
+}
 
   
