--- a/style.css
+++ b/style.css
@@ -27,11 +27,19 @@ h6 {
   text-align: center;
 }
 
-.center {
+.msulogo {
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 200px;
+  height: 200px;
+}
+
+.pythonlogo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 250px;
   height: 200px;
 }
 
