--- a/style.css
+++ b/style.css
@@ -48,4 +48,18 @@ hr {
   height: 10px;
 }
 
+h1 {
+  font-family: "Shrikhand", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 70px;
+}
+
+h3 {
+  font-family: "Shrikhand", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 40px;
+}
+
   
