--- a/style.css
+++ b/style.css
@@ -56,10 +56,32 @@ h1 {
 }
 
 h3 {
-  font-family: "Shrikhand", serif;
-    font-weight: 400;
+  font-family: "Roboto Slab", serif;
+    font-weight: 500;
     font-style: normal;
     font-size: 40px;
 }
+
+p {
+  font-family: "Lato", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  font-size: 25px;
+}
+
+li{
+  font-family: "Lato", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  font-size: 25px;
+}
+
+h4{
+  font-family: "Lato", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  font-size: 30px;
+}
+
 
   
